tests/ui/repr/issue-83921-ice.stderr
error[E0552]: incorrect `repr(packed)` attribute format: `packed` takes exactly one parenthesized argument, or no parentheses at all
  --> $DIR/issue-83921-ice.rs:6:8
   |
LL | #[repr(packed())]
   |        ^^^^^^^^

error[E0589]: invalid `repr(align)` attribute: `align` needs an argument
  --> $DIR/issue-83921-ice.rs:10:8
   |
LL | #[repr(align)]
   |        ^^^^^ help: supply an argument here: `align(...)`

error[E0693]: incorrect `repr(align)` attribute format: `align` takes exactly one argument in parentheses
  --> $DIR/issue-83921-ice.rs:14:8
   |
LL | #[repr(align(2, 4))]
   |        ^^^^^^^^^^^

error[E0693]: incorrect `repr(align)` attribute format: `align` takes exactly one argument in parentheses
  --> $DIR/issue-83921-ice.rs:18:8
   |
LL | #[repr(align())]
   |        ^^^^^^^

error[E0552]: invalid representation hint: `i8` does not take a parenthesized argument list
  --> $DIR/issue-83921-ice.rs:22:8
   |
LL | #[repr(i8())]
   |        ^^^^

error[E0552]: invalid representation hint: `u32` does not take a parenthesized argument list
  --> $DIR/issue-83921-ice.rs:26:8
   |
LL | #[repr(u32(42))]
   |        ^^^^^^^

error[E0552]: invalid representation hint: `i64` does not take a value
  --> $DIR/issue-83921-ice.rs:30:8
   |
LL | #[repr(i64 = 2)]
   |        ^^^^^^^

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0552, E0589, E0693.
For more information about an error, try `rustc --explain E0552`.
